--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,17 @@ dependencies {
     //dexter permission
     implementation 'com.karumi:dexter:6.2.2'
 
+    //life cycle view model
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    // coroutine library for threading
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.0"
+
+
 
 }
